--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@ unless you know exactly what you're doing! -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <script src="gh-pages-url-parser.js" type="text/javascript"></script>
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"> -->
+    <!-- <script src="gh-pages-url-parser.js" type="text/javascript"></script> -->
 
     <title>React App</title>
 </head>
